--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.5.1",
     "eslint-config-prettier": "9.0.0",
     "happy-dom": "12.1.5",
+    "msw": "1.3.1",
     "postcss": "8.4.30",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "0.4.1",
@@ -37,5 +38,8 @@
     "vite-tsconfig-paths": "4.2.1",
     "vitest": "0.34.5"
   },
-  "packageManager": "pnpm@8.7.6+sha256.c95869d443ed8fd6b7bb164bb8e89b56cabdc24f3c79b87ef68d8ae1c6b1d0e2"
+  "packageManager": "pnpm@8.7.6+sha256.c95869d443ed8fd6b7bb164bb8e89b56cabdc24f3c79b87ef68d8ae1c6b1d0e2",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
