--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "format:check": "prettier \"**/*.{ts,tsx,cjs,css.json,yml,md}\" --check"
   },
   "dependencies": {
+    "@phosphor-icons/react": "2.0.13",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.46.1",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@nix6839/prettier-config": "1.0.8",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
     "@types/node": "18.17.18",
     "@types/prettier": "2.7.3",
     "@types/react": "18.2.22",
