--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-config-next": "13.5.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-testing-library": "6.0.1",
+    "eslint-plugin-vitest": "0.3.1",
     "happy-dom": "12.1.5",
     "msw": "1.3.1",
     "postcss": "8.4.30",
