--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "vitest": "0.34.5"
   },
   "packageManager": "pnpm@8.7.6+sha256.c95869d443ed8fd6b7bb164bb8e89b56cabdc24f3c79b87ef68d8ae1c6b1d0e2",
+  "engines": {
+    "node": ">=18.12.0 <19"
+  },
   "msw": {
     "workerDirectory": "public"
   }
