--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "2.0.13",
+    "@tanstack/react-query": "5.0.0-beta.35",
     "next": "13.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@nix6839/prettier-config": "1.0.8",
+    "@tanstack/eslint-plugin-query": "5.0.0-beta.20",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
