--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "vitest",
+    "test": "playwright test -c playwright-ct.config.ts",
     "lint": "next lint",
     "type:check": "tsc",
     "format": "prettier \"**/*.{ts,tsx,cjs,css.json,yml,md}\" --write",
@@ -25,28 +25,23 @@
   },
   "devDependencies": {
     "@nix6839/prettier-config": "1.0.8",
+    "@playwright/experimental-ct-react": "1.38.1",
+    "@playwright/test": "1.38.1",
     "@tanstack/eslint-plugin-query": "5.0.0-beta.20",
-    "@testing-library/jest-dom": "6.1.3",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.5.1",
     "@types/node": "18.17.18",
     "@types/prettier": "2.7.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@vitejs/plugin-react-swc": "3.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-testing-library": "6.0.1",
-    "eslint-plugin-vitest": "0.3.1",
-    "happy-dom": "12.1.5",
+    "eslint-plugin-playwright": "0.16.0",
     "msw": "1.3.1",
+    "playwright-msw": "2.2.1",
     "postcss": "8.4.30",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "0.4.1",
-    "typescript": "5.2.2",
-    "vite-tsconfig-paths": "4.2.1",
-    "vitest": "0.34.5"
+    "typescript": "5.2.2"
   },
   "packageManager": "pnpm@8.7.6+sha256.c95869d443ed8fd6b7bb164bb8e89b56cabdc24f3c79b87ef68d8ae1c6b1d0e2",
   "engines": {
