--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
     "jsx": "preserve",
     "incremental": true,
 
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@tests/*": ["./tests/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
