--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-error-boundary": "4.0.11",
     "react-hook-form": "7.46.2",
     "tailwindcss": "3.3.3"
   },
