--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "2.0.13",
-    "@tanstack/react-query": "5.0.0-beta.35",
-    "@tanstack/react-query-devtools": "5.0.0-beta.36",
+    "@tanstack/react-query": "5.0.0-rc.1",
+    "@tanstack/react-query-devtools": "5.0.0-rc.1",
     "axios": "1.5.0",
-    "next": "13.5.2",
+    "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.11",
@@ -29,13 +29,13 @@
     "@nix6839/prettier-config": "1.0.8",
     "@playwright/experimental-ct-react": "1.38.1",
     "@playwright/test": "1.38.1",
-    "@tanstack/eslint-plugin-query": "5.0.0-beta.20",
+    "@tanstack/eslint-plugin-query": "5.0.0-rc.1",
     "@types/node": "18.17.19",
     "@types/prettier": "2.7.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "eslint": "8.50.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "13.5.3",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-playwright": "0.16.0",
     "msw": "1.3.1",
