--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "5.0.0-rc.1",
     "@tanstack/react-query-devtools": "5.0.0-rc.1",
     "axios": "1.5.0",
+    "dayjs": "1.11.10",
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
