--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "2.0.13",
-    "@tanstack/react-query": "5.0.0-rc.4",
-    "@tanstack/react-query-devtools": "5.0.0-rc.4",
+    "@tanstack/react-query": "5.0.0",
+    "@tanstack/react-query-devtools": "5.0.3",
     "axios": "1.5.1",
     "dayjs": "1.11.10",
-    "next": "13.5.4",
+    "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.11",
@@ -28,17 +28,17 @@
   },
   "devDependencies": {
     "@nix6839/prettier-config": "1.0.8",
-    "@playwright/experimental-ct-react": "1.38.1",
-    "@playwright/test": "1.38.1",
-    "@tanstack/eslint-plugin-query": "5.0.0-rc.4",
-    "@types/node": "18.18.3",
+    "@playwright/experimental-ct-react": "1.39.0",
+    "@playwright/test": "1.39.0",
+    "@tanstack/eslint-plugin-query": "5.0.0",
+    "@types/node": "18.18.6",
     "@types/prettier": "2.7.3",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.8",
-    "eslint": "8.50.0",
-    "eslint-config-next": "13.5.4",
+    "@types/react": "18.2.31",
+    "@types/react-dom": "18.2.14",
+    "eslint": "8.52.0",
+    "eslint-config-next": "13.5.6",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-playwright": "0.16.0",
+    "eslint-plugin-playwright": "0.17.0",
     "msw": "1.3.2",
     "playwright-msw": "2.2.1",
     "postcss": "8.4.31",
