--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
 
     "strict": true,
     "noImplicitOverride": true,
+    "forceConsistentCasingInFileNames": true,
 
     "baseUrl": "./",
     "paths": {
